--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -183,7 +183,8 @@ sidebar_position: 1
 | 2022.11.18 | 采访    | 生田絵梨花が感じる舞台の魅力「作品が育っていくような感覚」  | [生](https://ovo.kyodo.co.jp/interview/a-1818452)   |               |
 | 2022.11.19 | 杂志   | 『HighwayWalker』12月号 東日本版&北海道版 | [网盘](https://pan.baidu.com/s/1zjQ-8r1ChAy4wLenSpOiWQ?pwd=0122)       |                      |
 | 2022.11.19 | 电视剧   | 『PICU 小児集中治療室』吉沢亮×高杉真宙×生田絵梨花×菅野莉央 座談会Part②   |   [生](https://pan.baidu.com/s/1zjQ-8r1ChAy4wLenSpOiWQ?pwd=0122)    | [油管](https://www.youtube.com/watch?v=QCMZjH57y5o) |
-| 2022.11.19 | 音乐   | 『Venue101』#20 MC 23:00~   |        |                      |
+| 2022.11.19 | 音乐   | 『Venue101』#20 MC 23:00~ 嘉宾:≠ME『はにかみショート』 idom『GLOW』 TravisJapan『JUSTDANCE!』 ハマいく『ビートDEトーヒ』| [生](https://www.bilibili.com/video/BV1DG4y1R71o)       |                      |
+| 2022.11.20 | 音乐   | ハマいく『ビートDEトーヒ』配信 |[链接](https://hamaiku.lnk.to/beatdetohiTP)|[网盘](https://pan.baidu.com/s/1Nhq-j4z9DLmCqm71Jka-Lg?pwd=0122)|
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
 | 2022.11.22  | 杂志   | 『美的』1月号 |       |   |
 | 2022.11.22  | 杂志   | 『TV Station』2022 年 24 号 Girls Pop　ANTENNA |       |   |
@@ -192,7 +193,7 @@ sidebar_position: 1
 | 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   |                                     |               |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドBS＋CS」インタビュー  |        |                      |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドプレミアム」インタビュー |        |                      |
-| 2022.11.26 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
+| 2022.11.26 | 音乐   | 『Venue101』#21 MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
 | 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
