--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -195,6 +195,7 @@ sidebar_position: 1
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドプレミアム」インタビュー |        |                      |
 | 2022.11.26 | 音乐   | 『Venue101』#21 MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
+| 2022.11.30 | 番组    | 『TOKIOカケル』23:00~23:40   |                                     |               |
 | 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
 | 2022.12.3 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
