--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -188,7 +188,7 @@ sidebar_position: 1
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
 | 2022.11.22  | 杂志   | 『美的』1月号 |  [微博](https://weibo.com/5177703789/MgaWqrlNL)     |   |
 | 2022.11.22  | 杂志   | 『TV Station』2022 年 24 号 Girls Pop　ANTENNA |       |   |
-| 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   |       |        |
+| 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   | [新闻图包](https://pan.baidu.com/s/12cGj3XCWMHsxSFIMO7Cb9w?pwd=0122)   | [油管](https://www.youtube.com/watch?v=2F0ORcg6hjo)       |
 | 2022.11.22 | 番组    | 明日よる7時は…吹奏楽の旅2022完結編 第1弾 22:54～23:00   |                                     |               |
 | 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   |                                     |               |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドBS＋CS」インタビュー  |        |                      |
