--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -185,12 +185,12 @@ sidebar_position: 1
 | 2022.11.19 | 电视剧   | 『PICU 小児集中治療室』吉沢亮×高杉真宙×生田絵梨花×菅野莉央 座談会Part②   |   [生](https://pan.baidu.com/s/1zjQ-8r1ChAy4wLenSpOiWQ?pwd=0122)    | [油管](https://www.youtube.com/watch?v=QCMZjH57y5o) |
 | 2022.11.19 | 音乐   | 『Venue101』#20 MC 23:00~ 嘉宾:≠ME『はにかみショート』 idom『GLOW』 TravisJapan『JUSTDANCE!』 ハマいく『ビートDEトーヒ』| [生](https://www.bilibili.com/video/BV1DG4y1R71o)       |                      |
 | 2022.11.20 | 音乐   | ハマいく『ビートDEトーヒ』配信 |[链接](https://hamaiku.lnk.to/beatdetohiTP)|[网盘](https://pan.baidu.com/s/1Nhq-j4z9DLmCqm71Jka-Lg?pwd=0122)|
-| 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
+| 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.11.22  | 杂志   | 『美的』1月号 |  [微博](https://weibo.com/5177703789/MgaWqrlNL)     |   |
 | 2022.11.22  | 杂志   | 『TV Station』2022 年 24 号 Girls Pop　ANTENNA |       |   |
 | 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   | [新闻图包](https://pan.baidu.com/s/12cGj3XCWMHsxSFIMO7Cb9w?pwd=0122)   | [油管](https://www.youtube.com/watch?v=2F0ORcg6hjo)       |
 | 2022.11.22 | 番组    | 明日よる7時は…吹奏楽の旅2022完結編 第1弾 22:54～23:00   |                                     |               |
-| 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   |                                     |               |
+| 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   | [生](https://www.bilibili.com/video/BV1pP411u782)   |           |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドBS＋CS」インタビュー  |        |                      |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドプレミアム」インタビュー |        |                      |
 | 2022.11.26 | 音乐   | 『Venue101』#21 MC 23:00~   |        |                      |
