--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -190,15 +190,16 @@ sidebar_position: 1
 | 2022.11.22  | 杂志   | 『TV Station』2022 年 24 号 Girls Pop　ANTENNA |       |   |
 | 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   | [新闻图包](https://pan.baidu.com/s/12cGj3XCWMHsxSFIMO7Cb9w?pwd=0122)   | [油管](https://www.youtube.com/watch?v=2F0ORcg6hjo)       |
 | 2022.11.22 | 番组    | 明日よる7時は…吹奏楽の旅2022完結編 第1弾 22:54～23:00   |                                     |               |
+| 2022.11.23 | 新闻    | ドデスカ-『映画かいけつゾロリ』  |     [生](https://pan.baidu.com/s/1tb3BomkRB_iUkAwOgixa0A?pwd=0122)       |    |
 | 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   | [生](https://www.bilibili.com/video/BV1pP411u782)   |           |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドBS＋CS」インタビュー  |        |                      |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドプレミアム」インタビュー |        |                      |
-| 2022.11.26 | 音乐   | 『Venue101』#21 MC 23:00~   |        |                      |
+| 2022.11.26 | 音乐   | 『Venue101』#21 MC 23:00~ 嘉宾:ano『ちゅ、多様性。』 キタニタツヤ『スカー』 乃木坂46『ここにはないもの』|  [乃木坂46cut](https://www.bilibili.com/video/BV1eG411M7Jf)      |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
 | 2022.11.30 | 番组    | 『TOKIOカケル』23:00~23:40   |                                     |               |
 | 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
-| 2022.12.3 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
+| 2022.12.3 | 音乐   | 『Venue101』#22 MC 23:00~ 嘉宾:INI『SPECTRA』 &TEAM『Under_the_skin』 SUPERBEAVER『ひたむき』|        |                      |
 | 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
 | 2022.12.7 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:28   |        |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
