--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -163,7 +163,7 @@ sidebar_position: 1
 | 2022.10.18  | 新闻    | バリはやッ！ＺＩＰ！『映画かいけつゾロリ』                                                                                                                                                              |                               [生](https://pan.baidu.com/s/1BQO0h4awrSIXtVdpVHsV1A?pwd=0122)                               |
 | 2022.10.22 | 音乐   | 『Venue101』#16 MC 23:00~ 嘉宾:美炎‐BIEN‐『fire nose..』 eill『フィナーレ』 Tani Yuuki『もう一度』 |  [生](https://pan.baidu.com/s/1rZ15EfbNBxYbLSOgSRqtEg?pwd=0122)      |                      |
 | 2022.10.24 | 电视剧   | 富士电视台『PICU 小児集中治療室』#3 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)      |                      |
-| 2022.10.26 | 电影   | 『Drコトー診療所』製作報告会   | [10/31公开](https://www.youtube.com/watch?v=LItxVld83ck)   |   [图包](https://pan.baidu.com/s/1aXKUZ4KeOdzBH-I31CWrTA?pwd=0122)            |
+| 2022.10.26 | 电影   | 『Drコトー診療所』製作報告会   | [熟](https://www.bilibili.com/video/BV1o8411V74R)   |   [油管](https://www.youtube.com/watch?v=LItxVld83ck) [图包](https://pan.baidu.com/s/1aXKUZ4KeOdzBH-I31CWrTA?pwd=0122)            |
 | 2022.10.27   | 新闻    | 闹钟TV-『Dr.コトー診療所』  |   [生](https://pan.baidu.com/s/1Deh0sPX128Sccf5B458gKw?pwd=0122)     |    |
 | 2022.10.27   | 新闻    | NONSTOP-『Dr.コトー診療所』  |     [生](https://pan.baidu.com/s/1Deh0sPX128Sccf5B458gKw?pwd=0122)       |    |
 | 2022.10.28   | 番组    | 传说中的客人【生甜甜圈＆梦幻蒙布朗！的受欢迎到派对的最佳店面best5】21:00～21:58    |  [生](https://pan.baidu.com/s/15VXoshryldU5lAJnC7G1ng?pwd=0122)    |  [tver](https://tver.jp/episodes/ephjz7esv1)             |
