--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -172,7 +172,7 @@ sidebar_position: 1
 | 2022.10.31 | 电视剧   | 富士电视台『PICU 小児集中治療室』#4 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)      |                      |
 | 2022.11.1  | CM      | 『e.design 事故保险』「真心想创造的安心感和体验篇」 |    [CM](https://weibo.com/5177703789/McZxxxlAj)    | [油管](https://www.youtube.com/watch?v=eu8PGn0W26A) |
 | 2022.11.1  | 杂志   | 『ステージぴあ』11+12月号 |    [ebook](https://t.pia.jp/pia/events/stagepia)    |   |
-| 2022.11.4   | 新闻    | 和手表一起，感受到季节的一瞬的北海道二世古之旅    |   [熟](https://www.bilibili.com/video/BV1rG411F7sc/)   |   [链接](https://www.asahi.com/and/article/20221104/423232029/)            |
+| 2022.11.4   | 新闻    | 和手表一起，感受到季节的一瞬的北海道二世古之旅【前編】    |   [熟](https://www.bilibili.com/video/BV1rG411F7sc/)   |   [链接](https://www.asahi.com/and/article/20221104/423232029/)            |
 | 2022.11.4   | 番组    | 熱狂！1/365のマニアさん 19:00～    |   [生](https://www.bilibili.com/video/BV1NG4y187k4)   |               |
 | 2022.11.5 | 音乐   | 『Venue101』#18 MC 23:00~ 嘉宾:日向坂46『月と星が踊るMidnight』 藤原さくら『まばたき』 緑黄色社会『ミチヲユケ』  | [蓝cut](https://www.bilibili.com/video/BV18e411F7ko)      |     [生](https://www.bilibili.com/video/BV15K411m7U6)   |
 | 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
@@ -197,6 +197,8 @@ sidebar_position: 1
 | 2022.11.26 | 音乐   | 『Venue101』#21 MC 23:00~ 嘉宾:ano『ちゅ、多様性。』 キタニタツヤ『スカー』 乃木坂46『ここにはないもの』|  [乃木坂46cut](https://www.bilibili.com/video/BV1eG411M7Jf)      |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |   
 | 2022.11.29 | 采访   | 映画「Dr.コトー診療所」出演の生田絵梨花 島での撮影は「過酷で大変な撮影でした」  | [链接](https://hominis.media/category/actor/post9913/)      |  |
+| 2022.11.30 | 电视剧   | 『PICU 小児集中治療室』吉沢亮×高杉真宙×生田絵梨花×菅野莉央 座談会Part③   |   [链接](https://tver.jp/episodes/epm4e9tadm)    |  |
+| 2022.11.30   | 新闻    | 和手表一起，感受到季节的一瞬的北海道二世古之旅【後編】    |      |   [链接](https://www.asahi.com/and/article/20221130/423300686/)            |
 | 2022.11.30 | 番组    | 『TOKIOカケル』23:00~23:40   |                                     |               |
 | 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
