--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -201,6 +201,7 @@ sidebar_position: 1
 | 2022.11.30 | 新闻    | 和手表一起，感受到季节的一瞬的北海道二世古之旅【後編】    |      |   [链接](https://www.asahi.com/and/article/20221130/423300686/)            |
 | 2022.11.30 | 杂志   | 「わんにゃんWalker」12・1月号 | [微博](https://m.weibo.cn/1559430790/4841526439970782) | [链接](https://sp.walkerplus.com/wannyan/dbook/) |
 | 2022.11.30 | 番组    | 『TOKIOカケル』23:00~23:40   |                                     |               |
+| 2022.12.1 | 采访   | 読書がセルフケアに。生田絵梨花が、お守りにしている一冊【私の愛読書】 | [链接](https://ddnavi.com/serial/1052340/a/)      |  |
 | 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
 | 2022.12.3  | FC   | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
 | 2022.12.3 | 音乐   | 『Venue101』#22 MC 23:00~ 嘉宾:INI『SPECTRA』 &TEAM『Under_the_skin』 SUPERBEAVER『ひたむき』|        |                      |
