--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -205,6 +205,7 @@ sidebar_position: 1
 | 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
 | 2022.12.3  | FC   | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
 | 2022.12.3 | 音乐   | 『Venue101』#22 MC 23:00~ 嘉宾:INI『SPECTRA』 &TEAM『Under_the_skin』 SUPERBEAVER『ひたむき』|        |                      |
+| 2022.12.5 | 电视剧   | 富士电视台『PICU 小児集中治療室』#9 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.12.6 | 杂志   | 「ダ・ヴィンチ」2023年1月号 |        |    [amazon](https://www.amazon.co.jp/gp/product/B0BLJ679XF)                  |
 | 2022.12.6 | 番组    | 『ヒューマングルメンタリー　オモウマい店』19:00~   |                                     |               |
 | 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
@@ -213,6 +214,7 @@ sidebar_position: 1
 | 2022.12.10 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 18:00 / START 19:00『配信』   |    |    |
+| 2022.12.12 | 电视剧   | 富士电视台『PICU 小児集中治療室』#10 21:00~   |    |                      |
 | 2022.12.14 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:03   |        |                      |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映   |    | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB) |
 | 2022.12.17 | 番组    | 『1億3000万人のSHOWチャンネル』21:00~  |                                     |               |
