--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -200,11 +200,12 @@ sidebar_position: 1
 | 2022.11.30 | 电视剧   | 『PICU 小児集中治療室』吉沢亮×高杉真宙×生田絵梨花×菅野莉央 座談会Part③   |   [链接](https://tver.jp/episodes/epm4e9tadm)    |  |
 | 2022.11.30 | 新闻    | 和手表一起，感受到季节的一瞬的北海道二世古之旅【後編】    |      |   [链接](https://www.asahi.com/and/article/20221130/423300686/)            |
 | 2022.11.30 | 杂志   | 「わんにゃんWalker」12・1月号 | [微博](https://m.weibo.cn/1559430790/4841526439970782) | [链接](https://sp.walkerplus.com/wannyan/dbook/) |
-| 2022.11.30 | 番组    | 『TOKIOカケル』23:00~23:40   |                                     |               |
+| 2022.11.30 | 番组    | 『TOKIOカケル』23:00~23:40   |  [生](https://www.bilibili.com/video/BV1AP4y197MC)     |               |
 | 2022.12.1 | 采访   | 読書がセルフケアに。生田絵梨花が、お守りにしている一冊【私の愛読書】 | [链接](https://ddnavi.com/serial/1052340/a/)      |  |
-| 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
+| 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |    [新闻图包](https://pan.baidu.com/s/18QBSVUPeKb97svtP_FkeIA?pwd=0122)                      |           |
+| 2022.12.3  | 音乐   | 「自信満々よ」MV公開   |  [生](https://www.bilibili.com/video/BV1eP4y197bW)  |  [油管](https://www.youtube.com/watch?v=CNnVU2D9FDY)  |
 | 2022.12.3  | FC   | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
-| 2022.12.3 | 音乐   | 『Venue101』#22 MC 23:00~ 嘉宾:INI『SPECTRA』 &TEAM『Under_the_skin』 SUPERBEAVER『ひたむき』|        |                      |
+| 2022.12.3 | 音乐   | 『Venue101』#22 MC 23:00~ 嘉宾:INI『SPECTRA』 &TEAM『Under_the_skin』 SUPERBEAVER『ひたむき』 ハマいく『ビートDEトーヒ』|  [生](https://www.bilibili.com/video/BV1y14y1E78k/)      |                      |
 | 2022.12.5 | 电视剧   | 富士电视台『PICU 小児集中治療室』#9 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.12.6 | 杂志   | 「ダ・ヴィンチ」2023年1月号 |        |    [amazon](https://www.amazon.co.jp/gp/product/B0BLJ679XF)                  |
 | 2022.12.6 | 番组    | 『ヒューマングルメンタリー　オモウマい店』19:00~   |                                     |               |
