--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -208,7 +208,7 @@ sidebar_position: 1
 | 2022.12.3 | 音乐   | 『Venue101』#22 MC 23:00~ 嘉宾:INI『SPECTRA』 &TEAM『Under_the_skin』 SUPERBEAVER『ひたむき』 ハマいく『ビートDEトーヒ』|  [生](https://www.bilibili.com/video/BV1y14y1E78k/)      |                      |
 | 2022.12.5 | 电视剧   | 富士电视台『PICU 小児集中治療室』#9 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.12.6 | 杂志   | 「ダ・ヴィンチ」2023年1月号 | [微博](https://weibo.com/5177703789/MierzuydH)  |[amazon](https://www.amazon.co.jp/gp/product/B0BLJ679XF) |
-| 2022.12.6 | 番组    | 『ヒューマングルメンタリー　オモウマい店』19:00~   |                                     |               |
+| 2022.12.6 | 番组    | 『ヒューマングルメンタリー　オモウマい店』19:00~   | [生](https://www.bilibili.com/video/BV1fK411X7VR)      |               |
 | 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
 | 2022.12.7 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:28   |        |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
