--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -194,7 +194,7 @@ sidebar_position: 1
 | 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   | [生](https://www.bilibili.com/video/BV1pP411u782)   |           |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドBS＋CS」インタビュー  |        |                      |
 | 2022.11.24 | 杂志   | 「スカパー!TVガイドプレミアム」インタビュー |        |                      |
-| 2022.11.26 | 音乐   | 『Venue101』#21 MC 23:00~ 嘉宾:ano『ちゅ、多様性。』 キタニタツヤ『スカー』 乃木坂46『ここにはないもの』|  [乃木坂46cut](https://www.bilibili.com/video/BV1eG411M7Jf)      |                      |
+| 2022.11.26 | 音乐   | 『Venue101』#21 MC 23:00~ 嘉宾:ano『ちゅ、多様性。』 キタニタツヤ『スカー』 乃木坂46『ここにはないもの』|  [乃木坂46cut](https://www.bilibili.com/video/BV1eG411M7Jf)      | [aftertalk](https://www.bilibili.com/video/BV1iW4y1p7gv)                     |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)      |   
 | 2022.11.29 | 采访   | 映画「Dr.コトー診療所」出演の生田絵梨花 島での撮影は「過酷で大変な撮影でした」  | [链接](https://hominis.media/category/actor/post9913/)      |  |
 | 2022.11.30 | 电视剧   | 『PICU 小児集中治療室』吉沢亮×高杉真宙×生田絵梨花×菅野莉央 座談会Part③   |   [链接](https://tver.jp/episodes/epm4e9tadm)    |  |
@@ -209,7 +209,7 @@ sidebar_position: 1
 | 2022.12.5 | 电视剧   | 富士电视台『PICU 小児集中治療室』#9 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.12.6 | 杂志   | 「ダ・ヴィンチ」2023年1月号 | [微博](https://weibo.com/5177703789/MierzuydH)  |[amazon](https://www.amazon.co.jp/gp/product/B0BLJ679XF) |
 | 2022.12.6 | 番组    | 『ヒューマングルメンタリー　オモウマい店』19:00~   | [生](https://www.bilibili.com/video/BV1fK411X7VR)      |               |
-| 2022.12.7 | CM   | 『LINE GIFT』 CM公开   |  [30s](https://weibo.com/5177703789/MioiZ2yc6)      |  [15s](https://www.youtube.com/watch?v=RV1g31rAHY0) [making](https://www.youtube.com/watch?v=i3lrbTgjtwQ)                   |
+| 2022.12.7 | CM   | 『LINE GIFT』 CM公开   |  [30s](https://weibo.com/5177703789/MioiZ2yc6)  [making](https://weibo.com/tv/show/1034:4843962528366614)            |  [15s](https://www.youtube.com/watch?v=RV1g31rAHY0)             |
 | 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
 | 2022.12.7 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:28   |        |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
