--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -212,7 +212,7 @@ sidebar_position: 1
 | 2022.12.7 | CM   | 『LINE GIFT』 CM公开   |  [30s](https://weibo.com/5177703789/MioiZ2yc6)  [making](https://weibo.com/tv/show/1034:4843962528366614)            |  [15s](https://www.youtube.com/watch?v=RV1g31rAHY0)             |
 | 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
 | 2022.12.7 | 新闻    | TBS『THE TIME, 』Line Gift    |  [生](https://pan.baidu.com/s/1uX6kT6KJ9WCvg8n0I_gcgg?pwd=0122)    |               |
-| 2022.12.7 | 音乐   | 『2022FNS歌謡祭』『SWEET MEMORIES』松下洸平 × 生田絵梨花pf × 宮本笑里Vl　|  [生](https://www.bilibili.com/video/BV1F8411L7mS)      | 「銀の龍の背に乗って」采访&tver幕后                     |
+| 2022.12.7 | 音乐   | 『2022FNS歌謡祭』『SWEET MEMORIES』松下洸平 × 生田絵梨花pf × 宮本笑里Vl　|  [生](https://www.bilibili.com/video/BV1F8411L7mS)      | [「銀の龍の背に乗って」](https://pan.baidu.com/s/1ntDHT2uoENCwh4Taam7YhA?pwd=0122)&[TVer幕后](https://pan.baidu.com/s/1syK6rDP0vO7_83vK_pd8JA?pwd=0122)&[其他](https://pan.baidu.com/s/1plitacrQ3w33wnc-XBeejQ?pwd=0122)                     |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.10 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
