--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -221,6 +221,8 @@ sidebar_position: 1
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 18:00 / START 19:00『配信』   |    | [生](https://www.bilibili.com/video/BV1Fd4y1v7q8)   |
 | 2022.12.12  | 新闻    | 闹钟 TV-猜拳『PICU』|    [生](https://pan.baidu.com/s/16DShR7fm7z5PireV_6rJxA?pwd=0122)              |                |
 | 2022.12.12 | 电视剧   | 富士电视台『PICU 小児集中治療室』#10 21:00~   |    |                      |
+| 2022.12.14 | 番组    | Dr.コトー診療所 16年ぶりの同窓会② トークテーマ「この人を褒めたい！」   | [生](https://pan.baidu.com/s/1Ko3OmpMQkrguY7Nht9UKJg?pwd=0122)   |        |
+| 2022.12.14  | 新闻    | 闹钟 TV-猜拳『Dr.コトー診療所』|             |                |
 | 2022.12.14 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:03  『何なんw』   |        |                      |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映   |    | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB) |
 | 2022.12.17 | 番组    | 『1億3000万人のSHOWチャンネル』21:00~  |                                     |               |
