--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -212,7 +212,7 @@ sidebar_position: 1
 | 2022.12.7 | CM   | 『LINE GIFT』 CM公开   |  [30s](https://weibo.com/5177703789/MioiZ2yc6)  [making](https://weibo.com/tv/show/1034:4843962528366614)            |  [15s](https://www.youtube.com/watch?v=RV1g31rAHY0)             |
 | 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
 | 2022.12.7 | 新闻    | TBS『THE TIME, 』Line Gift    |  [生](https://pan.baidu.com/s/1uX6kT6KJ9WCvg8n0I_gcgg?pwd=0122)    |               |
-| 2022.12.7 | 音乐   | 『2022FNS歌謡祭』『SWEET MEMORIES』松下洸平 × 生田絵梨花pf × 宮本笑里Vl　|  [生](https://www.bilibili.com/video/BV1F8411L7mS)      | [「銀の龍の背に乗って」](https://pan.baidu.com/s/1ntDHT2uoENCwh4Taam7YhA?pwd=0122)&[TVer幕后](https://www.bilibili.com/video/BV178411V7aZ)&[其他](https://pan.baidu.com/s/1plitacrQ3w33wnc-XBeejQ?pwd=0122)                     |
+| 2022.12.7 | 音乐   | 『2022FNS歌謡祭』『SWEET MEMORIES』松下洸平 × 生田絵梨花pf × 宮本笑里Vl　|  [全场熟肉](https://www.bilibili.com/video/BV1RR4y1C7RV)      | [「銀の龍の背に乗って」](https://pan.baidu.com/s/1ntDHT2uoENCwh4Taam7YhA?pwd=0122)&[TVer幕后](https://www.bilibili.com/video/BV178411V7aZ)&[其他](https://pan.baidu.com/s/1plitacrQ3w33wnc-XBeejQ?pwd=0122)                     |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.9  | 音乐   | 「オーディションへいこう」MV公開   |  |  [油管](https://www.youtube.com/watch?v=qrw5teKjt-s)  |
 | 2022.12.10 | 新闻    | 情報番組『キューン‼』Mean Girls    |  [生](https://pan.baidu.com/s/1JhItE8R8YQSeSsNaVEEv9w?pwd=0122)    |               |
@@ -220,13 +220,14 @@ sidebar_position: 1
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 18:00 / START 19:00『配信』   |    | [生](https://www.bilibili.com/video/BV1Fd4y1v7q8)   |
 | 2022.12.12  | 新闻    | 闹钟 TV-猜拳『PICU』|    [生](https://pan.baidu.com/s/16DShR7fm7z5PireV_6rJxA?pwd=0122)              |                |
-| 2022.12.12 | 电视剧   | 富士电视台『PICU 小児集中治療室』#10 21:00~   |    |                      |
+| 2022.12.12 | 电视剧   | 富士电视台『PICU 小児集中治療室』#10 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.12.14 | 番组    | Dr.コトー診療所 16年ぶりの同窓会② トークテーマ「この人を褒めたい！」   | [生](https://pan.baidu.com/s/1Ko3OmpMQkrguY7Nht9UKJg?pwd=0122)   |        |
 | 2022.12.14  | 新闻    | 闹钟 TV-猜拳『Dr.コトー診療所』|             |                |
 | 2022.12.14 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:03  『何なんw』   |        |                      |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映   |    | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB) |
 | 2022.12.17 | 番组    | 『1億3000万人のSHOWチャンネル』21:00~  |                                     |               |
 | 2022.12.18 | 番组    | 『ザ・ノンフィクション』遠く故郷を離れて ～この国で 命を救う人になる～ 旁白 【語り】生田絵梨花 14:00～14:55  |                 |               |
+| 2022.12.19 | 电视剧   | 富士电视台『PICU 小児集中治療室』#11 21:00~   |    |                      |
 | 2022.12.28 | 番组    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30分  |                 |               |
  
 
