--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -228,6 +228,6 @@ sidebar_position: 1
 | 2022.12.17 | 番组    | 『1億3000万人のSHOWチャンネル』21:00~  |                                     |               |
 | 2022.12.18 | 番组    | 『ザ・ノンフィクション』遠く故郷を離れて ～この国で 命を救う人になる～ 旁白 【語り】生田絵梨花 14:00～14:55  |                 |               |
 | 2022.12.19 | 电视剧   | 富士电视台『PICU 小児集中治療室』#11 21:00~   |    |                      |
-| 2022.12.28 | 番组    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30分  |                 |               |
+| 2022.12.28 | 广播    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30  |                 |               |
  
 
