--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -226,6 +226,7 @@ sidebar_position: 1
 | 2022.12.14 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:03  『何なんw』   | [生](https://pan.baidu.com/s/1UZOiPUN_yjtWvoZ8hikAFg?pwd=0122)       |  [うら生](https://weibo.com/tv/show/1034:4846672984080458)                    |
 | 2022.12.16 | 番组    | Dr.コトー診療所 16年ぶりの同窓会④ トークテーマ「変わったこと・変わらなかったこと」   | [生](https://pan.baidu.com/s/1F6HLgGfweBLYmiuBwVSBTw?pwd=0122)   |        |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映   |    | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB) |
+| 2022.12.17  | 新闻    | 闹钟 TV-『Dr.コトー診療所』|           |                |
 | 2022.12.17 | 番组    | 『1億3000万人のSHOWチャンネル』21:00~  |                                     |               |
 | 2022.12.18 | 番组    | 『ザ・ノンフィクション』遠く故郷を離れて ～この国で 命を救う人になる～ 旁白 【語り】生田絵梨花 14:00～14:55  |                 |               |
 | 2022.12.19 | 电视剧   | 富士电视台『PICU 小児集中治療室』#11 21:00~   |    |                      |
