--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -228,7 +228,7 @@ sidebar_position: 1
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映   |    | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB) |
 | 2022.12.17  | 新闻    | 闹钟 TV-『Dr.コトー診療所』|           |                |
 | 2022.12.17 | 番组    | 『1億3000万人のSHOWチャンネル』21:00~  |  [生](https://www.bilibili.com/video/BV1vd4y1Y7kd)         |               |
-| 2022.12.18 | 番组    | 『ザ・ノンフィクション』遠く故郷を離れて ～この国で 命を救う人になる～ 旁白 【語り】生田絵梨花 14:00～14:55  |                 |               |
+| 2022.12.18 | 番组    | 『ザ・ノンフィクション』遠く故郷を離れて ～この国で 命を救う人になる～ 旁白 【語り】生田絵梨花 14:00～14:55  |  [生](https://www.bilibili.com/video/BV1X84y1x72t/)               |               |
 | 2022.12.19 | 电视剧   | 富士电视台『PICU 小児集中治療室』#11 21:00~   |    |                      |
 | 2022.12.28 | 广播    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30  |                 |               |
  
