--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -231,6 +231,7 @@ sidebar_position: 1
 | 2022.12.18 | 番组    | 『ザ・ノンフィクション』遠く故郷を離れて ～この国で 命を救う人になる～ 旁白 【語り】生田絵梨花 14:00～14:55  |  [生](https://www.bilibili.com/video/BV1X84y1x72t/)               |               |
 | 2022.12.19 | 电视剧   | 富士电视台『PICU 小児集中治療室』#11 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.12.23 | CM   | 第99回箱根驿传　思念的传承篇  | [采访翻译](https://weibo.com/tv/show/1034:4849892183703628)   |  [链接](https://www.sapporobeer.jp/hakone/cm_graphic/)                    |
+| 2022.12.23 | 番组    | 「あさイチ」プレミアムトーク VTR出演  |  [生](https://www.bilibili.com/video/BV1QD4y177BA?t=243.7)               |               |
 | 2022.12.27 | 番组    | 冬の朗読音楽会♪ 朗読:生田絵梨花 音楽:紀平凱成 アリス物語/原作:ルイス・キャロル 23:10~  |                 |               |
 | 2022.12.28 | 广播    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30  |                 |               |
  
