--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -234,6 +234,7 @@ sidebar_position: 1
 | 2022.12.23 | CM   | 第99回箱根驿传　思念的传承篇  | [采访翻译](https://weibo.com/tv/show/1034:4849892183703628)   |  [链接](https://www.sapporobeer.jp/hakone/cm_graphic/)                    |
 | 2022.12.23 | 番组    | 「あさイチ」プレミアムトーク VTR出演  |  [生](https://www.bilibili.com/video/BV1QD4y177BA?t=243.7)               |               |
 | 2022.12.26 | 杂志   | voguegirl  |  [链接](https://voguegirl.jp/fashion/girlofthemonth/girlofthemonth202212/)  |                      |
+| 2022.12.27 | CM    | 「ADEKA」のTVCM「素財姫（縁起物）篇」  |   [ADEKA](https://www.adeka.co.jp/jimisugo/)              |   [链接](https://www.youtube.com/watch?v=0a_8fAcxNl0)            |
 | 2022.12.27 | 番组    | 冬の朗読音楽会♪ 朗読:生田絵梨花 音楽:紀平凱成 アリス物語/原作:ルイス・キャロル 23:10~  |                 |               |
 | 2022.12.28 | 广播    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30  |                 |               |
  
