--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -223,7 +223,7 @@ sidebar_position: 1
 | 2022.12.12 | 电视剧   | 富士电视台『PICU 小児集中治療室』#10 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.12.14 | 番组    | Dr.コトー診療所 16年ぶりの同窓会② トークテーマ「この人を褒めたい！」   | [生](https://pan.baidu.com/s/1Ko3OmpMQkrguY7Nht9UKJg?pwd=0122)   |        |
 | 2022.12.14  | 新闻    | 闹钟 TV-猜拳『Dr.コトー診療所』|  [生](https://pan.baidu.com/s/1UxCJvtNeF5hZ-GveBkIkVA?pwd=0122)           |                |
-| 2022.12.14 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:03  『何なんw』   | [生](https://pan.baidu.com/s/1UZOiPUN_yjtWvoZ8hikAFg?pwd=0122)       |  [うら生](https://weibo.com/tv/show/1034:4846672984080458)                    |
+| 2022.12.14 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:03  『何なんw』   | [熟](https://www.bilibili.com/video/BV1E14y1w7s2/)       |  [うら生](https://weibo.com/tv/show/1034:4846672984080458)                    |
 | 2022.12.16 | 番组    | Dr.コトー診療所 16年ぶりの同窓会④ トークテーマ「変わったこと・変わらなかったこと」   | [生](https://pan.baidu.com/s/1F6HLgGfweBLYmiuBwVSBTw?pwd=0122)   |        |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映   |    | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB) |
 | 2022.12.17  | 新闻    | 闹钟 TV-『Dr.コトー診療所』|           |                |
@@ -233,8 +233,9 @@ sidebar_position: 1
 | 2022.12.21 | 杂志   | VOCE 2月号 &beが奏でる  |  [链接](https://i-voce.jp/feed/2197014/)  |                      |
 | 2022.12.23 | CM   | 第99回箱根驿传　思念的传承篇  | [采访翻译](https://weibo.com/tv/show/1034:4849892183703628)   |  [链接](https://www.sapporobeer.jp/hakone/cm_graphic/)                    |
 | 2022.12.23 | 番组    | 「あさイチ」プレミアムトーク VTR出演  |  [生](https://www.bilibili.com/video/BV1QD4y177BA?t=243.7)               |               |
-| 2022.12.26 | 杂志   | 「VOGUE GIRL」追逐内心，生田绘梨花的时尚侦探  |  [链接](https://voguegirl.jp/fashion/girlofthemonth/girlofthemonth202212/)  |                      |
-| 2022.12.27 | CM    | 「ADEKA」のTVCM「素財姫（縁起物）篇」  |   [ADEKA](https://www.adeka.co.jp/jimisugo/)              |   [链接](https://www.youtube.com/watch?v=0a_8fAcxNl0)            |
+| 2022.12.26 | 杂志   | 「VOGUE GIRL」追逐内心，生田绘梨花的时尚侦探  |  [链接](https://voguegirl.jp/fashion/girlofthemonth/girlofthemonth202212/)  |        |
+| 2022.12.27 | CM    | 「ADEKA」のTVCM「素財姫（縁起物）篇」  | [熟](https://www.bilibili.com/video/BV1qe4y1j7bM)                |   [ADEKA](https://www.adeka.co.jp/jimisugo/)          |
+| 2022.12.27  | 新闻    | 闹钟TV『ADEKA』|           |                |
 | 2022.12.27 | 番组    | 冬の朗読音楽会♪ 朗読:生田絵梨花 音楽:紀平凱成 アリス物語/原作:ルイス・キャロル 23:10~  |                 |               |
 | 2022.12.28 | 广播    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30  |                 |               |
  
