--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -236,7 +236,7 @@ sidebar_position: 1
 | 2022.12.26 | 杂志   | 「VOGUE GIRL」追逐内心，生田绘梨花的时尚侦探  |  [链接](https://voguegirl.jp/fashion/girlofthemonth/girlofthemonth202212/)  |        |
 | 2022.12.27 | CM    | 「ADEKA」のTVCM「素財姫（縁起物）篇」  | [熟](https://www.bilibili.com/video/BV1qe4y1j7bM)                |   [ADEKA](https://www.adeka.co.jp/jimisugo/)          |
 | 2022.12.27  | 新闻    | 闹钟TV『ADEKA』|           |                |
-| 2022.12.27 | 番组    | 冬の朗読音楽会♪ 朗読:生田絵梨花 音楽:紀平凱成 アリス物語/原作:ルイス・キャロル 23:10~  |                 |               |
+| 2022.12.27 | 广播    | 冬の朗読音楽会♪ 朗読:生田絵梨花 音楽:紀平凱成 アリス物語/原作:ルイス・キャロル 23:10~  |                 |               |
 | 2022.12.28 | 广播    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30  |                 |               |
  
 
