--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -235,7 +235,9 @@ sidebar_position: 1
 | 2022.12.23 | 番组    | 「あさイチ」プレミアムトーク VTR出演  |  [生](https://www.bilibili.com/video/BV1QD4y177BA?t=243.7)               |               |
 | 2022.12.26 | 杂志   | 「VOGUE GIRL」追逐内心，生田绘梨花的时尚侦探  |  [链接](https://voguegirl.jp/fashion/girlofthemonth/girlofthemonth202212/)  |        |
 | 2022.12.27 | CM    | 「ADEKA」のTVCM「素財姫（縁起物）篇」  | [熟](https://www.bilibili.com/video/BV1qe4y1j7bM)                |   [ADEKA](https://www.adeka.co.jp/jimisugo/)          |
-| 2022.12.27  | 新闻    | 闹钟TV『ADEKA』|           |                |
+| 2022.12.27  | 新闻    | バリはやッ！ＺＩＰ！『ADEKA』|           |    [生](https://pan.baidu.com/s/1pBIGqQH4xdEDgLd6RuPVEA?pwd=0122)            |
+| 2022.12.27  | 新闻    | アサデス。ＫＢＣ『ADEKA』|           |     [生](https://pan.baidu.com/s/1ZjvyB21eAgGG6vFFzk1vrw?pwd=0122)           |
+| 2022.12.27  | 新闻    | 闹钟TV『ADEKA』|           |     [生](https://pan.baidu.com/s/1QCu9QVhD6hZbm_YrB64Bqw?pwd=0122)        |
 | 2022.12.27 | 广播    | 冬の朗読音楽会♪ 朗読:生田絵梨花 音楽:紀平凱成 アリス物語/原作:ルイス・キャロル 23:10~  |    [生](https://pan.baidu.com/s/1uVov_S3rAEj9hmpkrX5ycA?pwd=0122)             |               |
 | 2022.12.28 | 广播    | ニッポン放送で特別番組『Dr.コトーラジオ』16:00～17:30  |  [生](https://pan.baidu.com/s/1QPYaUUopDDZb3U2q6mgb4g?pwd=0122)   |               |
  
