--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -11,8 +11,8 @@ sidebar_position: 2
 | 🗓 日期    | 📌 分类 | 💛 详情                                                                      | 🔗 链接 | 🔨 备注                                                    |
 | :-------- | :------ | :--------------------------------------------------------------------------- | :-----: | ---------------------------------------------------------- |
 | 2023.1.1 | 番组   | 『ネタパレ元日SP』0:45~   |  [生](https://www.bilibili.com/video/BV1sM411y72A)      |                      |
-| 2023.1.2 | CM   |  第99回箱根駅伝　想いの継承篇   |      | [油管](youtube.com/watch?v=a14TvGVwhDc)                     |
-| 2023.1.2 | 番组   | 『せっかくグルメ 』新春4時間SP 17:00~   |        |                      |
+| 2023.1.2 | CM   |  第99回箱根駅伝　想いの継承篇   | [生](https://www.bilibili.com/video/BV1CG4y1m7yk)     | [油管](youtube.com/watch?v=a14TvGVwhDc)             |
+| 2023.1.2 | 番组   | 『せっかくグルメ 』新春4時間SP 17:00~   |  [生](https://www.bilibili.com/video/BV1Y24y1v7Tw/)      |                      |
 | 2023.1.7 | 音乐   | 『MUSIC FAIR』MEAN GIRLS 18:00~   |        |                      |
 | 2023.1.28 | 音乐   | 『Venue101』#24 MC 23:00~   |        |                      |
 | 2023.1.30 | 音乐剧  | 『MEAN GIRLS』【東京】東京建物 Brillia HALL（豊島区立芸術文化劇場）(～ 2.12) |         | [详细日程](https://musical-meangirls.jp/schedule.html#tokyo) |
