--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -210,7 +210,7 @@ sidebar_position: 1
 | 2022.12.6 | 杂志   | 「ダ・ヴィンチ」2023年1月号 | [微博](https://weibo.com/5177703789/MierzuydH)  |[amazon](https://www.amazon.co.jp/gp/product/B0BLJ679XF) |
 | 2022.12.6 | 番组    | 『ヒューマングルメンタリー　オモウマい店』19:00~   | [生](https://www.bilibili.com/video/BV1fK411X7VR)      |               |
 | 2022.12.7 | CM   | 『LINE GIFT』 CM公开   |  [30s](https://weibo.com/5177703789/MioiZ2yc6)  [making](https://weibo.com/tv/show/1034:4843962528366614)            |  [15s](https://www.youtube.com/watch?v=RV1g31rAHY0)             |
-| 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
+| 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   | [网盘](https://pan.baidu.com/s/1KeotwlqxpKsMvrCW69EEFg?pwd=0122)       |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
 | 2022.12.7 | 新闻    | TBS『THE TIME, 』Line Gift    |  [生](https://pan.baidu.com/s/1uX6kT6KJ9WCvg8n0I_gcgg?pwd=0122)    |               |
 | 2022.12.7 | 音乐   | 『2022FNS歌謡祭』『SWEET MEMORIES』松下洸平 × 生田絵梨花pf × 宮本笑里Vl　|  [全场熟肉](https://www.bilibili.com/video/BV1RR4y1C7RV?t=1694.3)      | [「銀の龍の背に乗って」](https://pan.baidu.com/s/1ntDHT2uoENCwh4Taam7YhA?pwd=0122)&[TVer幕后](https://www.bilibili.com/video/BV178411V7aZ)&[其他](https://pan.baidu.com/s/1plitacrQ3w33wnc-XBeejQ?pwd=0122)                     |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
