--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -15,7 +15,7 @@ sidebar_position: 2
 | 2023.1.2 | 番组   | 『せっかくグルメ』新春4時間SP 17:00~   |  [生](https://www.bilibili.com/video/BV1Y24y1v7Tw/)      |                      |
 | 2023.1.5 | 电影   | 『五岛医生诊疗所』六分钟正片内容解禁   |  [熟](https://www.bilibili.com/video/BV1B3411S77f)      |                      |
 | 2023.1.6 | 番组   | 『ten.』18:00~   | [生](https://pan.baidu.com/s/1Qs4vSQtUQeLIDJamp9sahA?pwd=0122)      |                      |
-| 2023.1.7 | 音乐   | 『MUSIC FAIR』MEAN GIRLS 18:00~   |        |                      |
+| 2023.1.7 | 音乐   | 『MUSIC FAIR』MEAN GIRLS 18:00~   |  [生](https://pan.baidu.com/s/1RM02OeF9mXUeUDZ5Bc3o3Q?pwd=0122)      |                      |
 | 2023.1.13 | 番组   | 『ネタパレ』23:40~   |       |                      |
 | 2023.1.20 | 杂志   | 『VOCE』2023年3月号   |        |    [amazon](https://www.amazon.co.jp/gp/product/B0BQZ89G3D)                  |
 | 2023.1.28 | 音乐   | 『Venue101』#24 MC 23:00~   |        |                      |
