--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -10,12 +10,13 @@ sidebar_position: 2
 
 | 🗓 日期    | 📌 分类 | 💛 详情                                                                      | 🔗 链接 | 🔨 备注                                                    |
 | :-------- | :------ | :--------------------------------------------------------------------------- | :-----: | ---------------------------------------------------------- |
-| 2023.1.1 | 番组   | 『ネタパレ元日SP』0:45~   |  [生](https://www.bilibili.com/video/BV1sM411y72A)      |                      |
+| 2023.1.1 | 番组   | 『ネタパレ元日SP』0:45~   |  [生](https://www.bilibili.com/video/BV1sM411y72A)      |  1.6相同                    |
 | 2023.1.2 | CM   |  第99回箱根駅伝　想いの継承篇   | [生](https://www.bilibili.com/video/BV1CG4y1m7yk)     |             |
 | 2023.1.2 | 番组   | 『せっかくグルメ』新春4時間SP 17:00~   |  [生](https://www.bilibili.com/video/BV1Y24y1v7Tw/)      |                      |
 | 2023.1.5 | 电影   | 『五岛医生诊疗所』六分钟正片内容解禁   |  [熟](https://www.bilibili.com/video/BV1B3411S77f)      |                      |
 | 2023.1.6 | 番组   | 『ten.』18:00~   | [生](https://pan.baidu.com/s/1Qs4vSQtUQeLIDJamp9sahA?pwd=0122)      |                      |
-| 2023.1.7 | 音乐   | 『MUSIC FAIR』MEAN GIRLS 18:00~   |  [生](https://pan.baidu.com/s/1RM02OeF9mXUeUDZ5Bc3o3Q?pwd=0122)      |                      |
+| 2023.1.7 | 音乐   | 『MUSIC FAIR』MEAN GIRLS 18:00~   |    [熟](https://www.bilibili.com/video/BV1Jv4y1q72B)      |                      |
+| 2023.1.8 | 番组   | 『プレミアの巣窟』MEAN GIRLS    |    [生](https://www.bilibili.com/video/BV1oG4y1w7DE?t=406.8)      |                      |
 | 2023.1.13 | 番组   | 『ネタパレ』23:40~   |       |                      |
 | 2023.1.20 | 杂志   | 『VOCE』2023年3月号   |        |    [amazon](https://www.amazon.co.jp/gp/product/B0BQZ89G3D)                  |
 | 2023.1.28 | 音乐   | 『Venue101』#24 MC 23:00~   |        |                      |
@@ -27,3 +28,4 @@ sidebar_position: 2
 | 2023.5.4 | 音乐剧  | 『GYPSY』【大阪】森ノ宮ピロティホール(~5.7)            |       |  [详细日程](https://gypsy2023.com/osaka.html)  |
 | 2023.5.12 | 音乐剧  | 『GYPSY』【愛知】刈谷市総合文化センター アイリス 大ホール(~5.14)            |         |  [详细日程](https://gypsy2023.com/aichi.html)  |
 | 2023.5.19 | 音乐剧  | 『GYPSY』【福岡】キャナルシティ劇場(~5.21)            |         |  [详细日程](https://gypsy2023.com/fukuoka.html)  |
+
